prost-reflect-derive/tests/missing_attr.stderr
error: missing #[prost_reflect] attribute
 --> tests/missing_attr.rs:4:12
  |
4 | pub struct MyMessage {}
  |            ^^^^^^^^^
