prost-reflect-derive/tests/missing_attr.rs
use prost_reflect_derive::ReflectMessage;

#[derive(ReflectMessage)]
pub struct MyMessage {}

fn main() {}
